--- a/src/main/webapp/web/index.html
+++ b/src/main/webapp/web/index.html
@@ -7,26 +7,23 @@
 	<script src="https://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
 	<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<script type="text/javascript">
-		var n = 2;
 		function checkRound(r) {
-			if(r>n) {
-				alert("第三轮尚未解锁！");
-				return;
-			} else {
-				var data = {
-						serviceId:1,
-						actionId:1,
-						content:'{id:\'40284cd85dbbc53e015dbbc540250000\'}'
-					};
-				$.post("/BaseAction",
-						JSON.stringify(data),
-						function(rsp){
-				       		console.log(rsp);
-				    },"json");
-				
-				var re = document.getElementById("r");
-				re.innerHTML = r;
-			}
+			var data = {
+					serviceId:1,
+					actionId:2,
+					content:'{id:\'402881e65de12d3f015de12d41a00000\'}'
+				};
+			$.post("/BaseAction",
+					JSON.stringify(data),
+					function(rsp){
+			       		if(rsp.data >= r) {
+							var re = document.getElementById("r");
+							re.innerHTML = r;
+			       		} else {
+			       			alert("本轮尚未开启，请等待主持人口令");
+			       		}
+			    },"json");
+			
 		}
 	</script>
 </head>  
