--- a/src/main/webapp/web/index.html
+++ b/src/main/webapp/web/index.html
@@ -6,78 +6,219 @@
 	<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<script src="https://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
 	<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<script type="text/javascript">
-		function checkRound(r) {
-			var data = {
-					serviceId:1,
-					actionId:2,
-					content:'{id:\'402881e65de12d3f015de12d41a00000\'}'
-				};
-			$.post("/BaseAction",
-					JSON.stringify(data),
-					function(rsp){
-			       		if(rsp.data >= r) {
-							var re = document.getElementById("r");
-							re.innerHTML = r;
-			       		} else {
-			       			alert("本轮尚未开启，请等待主持人口令");
-			       		}
-			    },"json");
+	<script type="text/javascript" src="js/index.js"></script>
+	<style type="text/css">
+		body{
+			background:#F0FFFF;
+		}
+		#mainContent{
+			clear:both;
+			/*background:#F0FFFF;*/
+			margin-left:20px;
+		}
+		#roundTab { 
+			font:12px verdana, arial, sans-serif; /* 设置文字大小和字体样式 */
+		}
+		
+		#roundTab li{
+			border-radius:3px;
+		}
+		
+		#roundTab li {
+			list-style:none; /* 将默认的列表符号去掉 */
+			padding:10px; /* 将默认的内边距去掉 */
+			margin:10px; /* 将默认的外边距去掉 */
+			float:left; /* 往左浮动 */
+			cursor:pointer;
+			text-decoration: none;
+		}
+		#roundTab li:hover {
+			text-decoration: none;
+		}
+		#myTabContent {
+		}
+		#roundContent table{
 			
 		}
-	</script>
+		#roundContent div{
+			padding:10px;
+		}
+		
+		#direct img{
+			width:50px;
+			height:30px;
+			position:absolute;
+			margin-left:600px;
+			margin-top:180px;
+		}
+		#roundContent table{
+			align:center;
+			font-size:7px;
+			border-radius:3px;
+		}
+		#table1{
+			position:absolute;	
+		}
+		#table1 table{
+			width:580px;
+			height:400px;
+			text-align:center;
+			background-color:#F5FFFA;
+			
+		}
+		
+		#table1 tr {
+		}
+		
+		#table1 td {
+		}
+		
+		table .head{
+			background-color:#E0FFFF;
+			font-size:10px;
+			font-weight:bold;
+		}
+		
+		table .title{
+			background-color:#E0FFFF;
+			font-size:15px;
+			font-weight:bold;
+		}
+		
+		table .title2{
+			background-color:#F5FFFA;
+			font-size:12px;
+			font-weight:bold;
+		}
+		
+		#table2 {
+			position:absolute;	
+			margin-top:380px;
+		}
+		#table2 table{
+			width:1190px;
+		/*	background-color:#76EEC6;*/
+			text-align:center;
+			background-color:#F5FFFA;
+		}
+		
+		
+		input[type="button"] {
+			width:60px;
+			height:28px;
+			border-radius:3px;  
+			 -webkit-border-radius: 4px;
+			background-color:#8FBC8F;
+			font-size:15px;
+		}
+		
+		#table3 {
+			position:absolute;	
+			margin-left:660px;
+			margin-top:-20px;
+		}
+		#table3 table{
+			width:530px;
+			height:400px;
+			text-align:center;
+			background-color:#F5FFFA;
+			border-style: dashed;
+			border-width:2px;
+		}
+		
+		#table3 td{
+			border-style: dashed;
+			border-width:1px;
+		}
+		
+		input[type="text"]{
+			border-radius:3px;
+			-webkit-border-radius: 4px;
+		}
+		#roundContent table input[type="text"]{
+			width:90%;
+		}
+		#roundContent table td{
+		}
+		.home{
+			background:#9BCD9B;
+			padding:10px;
+		}
+		.selected{
+			background:#8DB6CD;
+			padding:10px;
+		}
+		.user{
+			background:#8FBC8F;
+		}
+		.cashStyle {
+			font-size:12px;
+			font-weight:bold;
+		}
+		
+		#gameDesc {
+			background:#B4CDCD;
+			padding:20px;
+			width:62%;
+			border-bottom-left-radius:8px;
+			border-bottom-right-radius:8px;
+		}
+		
+		#gameDesc li{
+			padding:10px;
+		}
+		
+		.nameContent {
+			background:#9BCD9B;
+			padding:20px;
+			width:62%;
+			border-top-left-radius:8px;
+			border-top-right-radius:8px;
+		}
+		
+		#userName {
+			font-size:35px;
+			padding:10px;
+		}
+	</style>
 </head>  
 <body>
 
-<ul id="myTab" class="nav nav-tabs">
-	<li class="active">
-		<a href="#home" data-toggle="tab">沙盘游戏</a>
-	</li>
-	<li><a href="#r-one" data-toggle="tab" onclick="checkRound(1)">第一轮</a></li>
-	<li><a href="#r-one" data-toggle="tab" onclick="checkRound(2)">第二轮</a></li>
-	<li><a href="#r-one" data-toggle="tab" onclick="checkRound(3)">第三轮</a></li>
-	<li><a href="#r-one" data-toggle="tab" onclick="checkRound(3)">第四轮</a></li>
-	<li><a href="#r-one" data-toggle="tab" onclick="checkRound(3)">第五轮</a></li>
-	<li><a href="#r-one" data-toggle="tab" onclick="checkRound(3)">第六轮</a></li>
-	<li><a href="#r-one" data-toggle="tab" onclick="checkRound(3)">第七轮</a></li>
-	<li><a href="#r-one" data-toggle="tab" onclick="checkRound(3)">第八轮</a></li>
-	<li><a href="#r-one" data-toggle="tab" onclick="checkRound(3)">第九轮</a></li>
-	<li><a href="#r-one" data-toggle="tab" onclick="checkRound(3)">第十轮</a></li>
-	
-</ul>
-<div id="myTabContent" class="tab-content">
-	<div class="tab-pane fade in active" id="home">
-		<p>开始游戏前</p>
-		<p>请输入你的名字</p>
-		<input type="text">
-	</div>
-	<div class="tab-pane fade" id="r-one">
-		<p>第<scan id="r">ddd</scan>轮</p>
-		<form role="form">
-		<table>
-			<tr>
-				<td>保险</td>
-				<td>
-					<input type="text">
-				</td>
-			</tr>
-			<tr>
-				<td>ETF</td>
-				<td>
-					<input type="text">
-				</td>
-			</tr>
-			<tr>
-			<td>
-				<input type="submit" value="提交">
-			</td>
-			</tr>
-		</table>
-		</form>
-	</div>
-	
-	
+<div id="roundTab">
+	<ul></ul>
 </div>
-
+<div id="mainContent">
+	<div id="myTabContent">
+			<div style="display:none" id="noName" class="nameContent">
+				<p>亲爱的进阶<span class="grade"></span>班学员，开始游戏前</p>
+				<p>请输入你的名字：</p>
+				<input type="text" id="name"><br><br>
+				<input type="button" value="确定" onclick="submitName()">
+			</div>
+			<div style="display:none" id="hasName" class="nameContent">
+				<p>欢迎你,</p>
+				 <span id="userName"></span>
+				 <br><br>
+				  <input type="button" value="注销" onclick="logout()"/>
+			</div>
+		<div id="gameDesc">
+			<h5>游戏说明</h5>
+			<ul>
+				<li>请在教练指导下进行</li>
+				<li>每一轮都需要等待主持人指令开启</li>
+				<li>请认真填写，提交前请点击预览确认</li>
+				<li>如因填写错误导致提交后需要修改，请联系教练解锁</li>
+				<li>……</li>
+			</ul>
+		</div>
+	</div>
+	<div id="roundContent" style="display:none;">
+		
+		<div id="table1"></div>
+		<div id="direct"><img src="img/timg.jpeg" /></div>
+		<div id="table3"></div>
+		<div id="table2"></div>
+	</div>
+</div>
 </body>
 </html>
