--- a/src/main/webapp/web/table2.html
+++ b/src/main/webapp/web/table2.html
@@ -45,7 +45,7 @@
 						<td><span class=""></span></td>
 						<td><span class="cash cashStyle"></span></td>
 					</tr>
-					<tr class="head" height=30 background="#F5FFFA">
+					<tr class="" height=30 background="#F5FFFA">
 						<td colspan=10>交易区</td>
 					</tr>
 					<tr class="head">
@@ -92,6 +92,7 @@
 					<tr height=40>
 						<td colspan=10>
 							<input type="button" onclick="view()" value="预览"/>
+							<input type="reset" value="重置"/>
 						</td>
 					</tr>
 					
