重构期初期末

--- a/src/main/webapp/web/admin.html
+++ b/src/main/webapp/web/admin.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="utf-8"> 
 	<title>管理员</title>
-	<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">  
-	<script src="https://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
-	<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	 <link rel="stylesheet" href="css/bootstrap.min.css">
+	<script src="js/jquery.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
 	<script type="text/javascript">
 		window.onload = function(){
 			var data = {
