--- a/src/main/webapp/web/table3.html
+++ b/src/main/webapp/web/table3.html
@@ -19,63 +19,63 @@
 			<tr>
 				<td rowspan=7>流动资产</td>
 				<td>保险</td>
-				<td><span class="insurePrice">0</span></td>
-				<td><span class="insureNumAfter">0</span></td>
-				<td><span class="insure">0</span></td>
+				<td><span class="insurePrice"></span></td>
+				<td><span class="insureNum"></span></td>
+				<td><span class="insure"></span></td>
 				<td rowspan=1 colspan=2>房地产</td>
 			</tr>
 			<tr>
 				<td>银行理财产品</td>
-				<td><span class="bankPrice">0</span></td>
-				<td><span class="bankNumAfter">0</span></td>
-				<td><span class="bank">0</span></td>
+				<td><span class="bankPrice"></span></td>
+				<td><span class="bankNum"></span></td>
+				<td><span class="bank"></span></td>
 				<td rowspan=2 colspan=2><span class="houseLoan"></span></td>
 			</tr>
 			<tr>
 				<td>美-黄金</td>
-				<td><span class="goldPrice">0</span></td>
-				<td><span class="goldNumAfter">0</span></td>
-				<td><span class="gold">0</span></td>
+				<td><span class="goldPrice"></span></td>
+				<td><span class="goldNum"></span></td>
+				<td><span class="gold"></span></td>
 			</tr>
 			<tr>
 				<td>香港中国</td>
-				<td><span class="hkPrice">0</span></td>
-				<td><span class="hkNumAfter">0</span></td>
-				<td><span class="hk">0</span></td>
+				<td><span class="hkPrice"></span></td>
+				<td><span class="hkNum"></span></td>
+				<td><span class="hk"></span></td>
 				<td rowspan=1 colspan=2>商业地产</td>
 			</tr>
 			<tr>
 				<td>ETF指数基金</td>
-				<td><span class="etfPrice">0</span></td>
-				<td><span class="etfNumAfter">0</span></td>
-				<td><span class="etf">0</span></td>
+				<td><span class="etfPrice"></span></td>
+				<td><span class="etfNum"></span></td>
+				<td><span class="etf"></span></td>
 				<td rowspan=2 colspan=2><span class="landLoan"></span></td>
 			</tr>
 			<tr>
 				<td>浦发银行</td>
-				<td><span class="pufaPrice">0</span></td>
-				<td><span class="pufaNumAfter">0</span></td>
-				<td><span class="pufa">0</span></td>
+				<td><span class="pufaPrice"></span></td>
+				<td><span class="pufaNum"></span></td>
+				<td><span class="pufa"></span></td>
 			</tr>
 			<tr>
 				<td>信托产品</td>
-				<td><span class="trustPrice">0</span></td>
-				<td><span class="trustNumAfter">0</span></td>
-				<td><span class="trust">0</span></td>
+				<td><span class="trustPrice"></span></td>
+				<td><span class="trustNum"></span></td>
+				<td><span class="trust"></span></td>
 				<td rowspan=2 colspan=2>信用贷款</td>
 			</tr>
 			<tr>
 				<td rowspan=2>固定资产</td>
 				<td>住宅（总价|首付）</td>
-				<td><span class="housePrice">0</span></td>
-				<td><span class="houseNumAfter">0</span></td>
-				<td><span class="house">0</span></td>
+				<td><span class="housePrice"></span></td>
+				<td><span class="houseNum"></span></td>
+				<td><span class="house"></span></td>
 			</tr>
 			<tr>
 				<td>商业地产（总价|首付）</td>
-				<td><span class="landPrice">0</span></td>
-				<td><span class="landNumAfter">0</span></td>
-				<td><span class="land">0</span></td>
+				<td><span class="landPrice"></span></td>
+				<td><span class="landNum"></span></td>
+				<td><span class="land"></span></td>
 				<td rowspan=2 colspan=2><span class="creditLoan"></span></td>
 			</tr>
 			<tr height=30>
@@ -84,26 +84,26 @@
 			<tr>
 				<td rowspan=5>其他资产</td>
 				<td colspan=2>现金金额</td>
-				<td colspan=2><span class="cash">0</span></td>
+				<td colspan=2><span class="cash"></span></td>
 				<td colspan=2 rowspan=2>总负债</td>
 			</tr>
 			<tr>
 				<td colspan=2>家庭收入结余</td>
-				<td colspan=2><span class="surplus">0</span></td>
+				<td colspan=2><span class="surplus"></span></td>
 			</tr>
 			<tr>
 				<td colspan=2>信用贷款利息支出</td>
-				<td colspan=2><span class="trustInterest">0</span></td>
+				<td colspan=2><span class="trustInterest"></span></td>
 				
 				<td rowspan=3 colspan=2><span class="totalDebt"></span></td>
 			</tr>
 			<tr>
 				<td colspan=2>房贷利息支出-住宅</td>
-				<td colspan=2><span class="houseInterest">0</span></td>
+				<td colspan=2><span class="houseInterest"></span></td>
 			</tr>
 			<tr>
 				<td colspan=2>房贷利息支出-商业</td>
-				<td colspan=2><span class="landInterest">0</span></td>
+				<td colspan=2><span class="landInterest"></span></td>
 			</tr>
 			<tr height=40 style="font-size:9px;">
 				<td colspan=1>资产总额</td>
